--- a/portafolio/package.json
+++ b/portafolio/package.json
@@ -13,11 +13,13 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "framer-motion": "^10.12.4",
     "next": "13.3.2",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
   }
